fix: downgrade to jdk 17 for packaging purposes